# inkwell-2

./: .gitignore  CURRENT.md  README.md  index.html  package-lock.json  package.json
server/: orchestrator.cjs  project-state.cjs  providers.cjs  zhuque-server.cjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: CreationPanel.tsx  OnboardingTour.tsx  PromptPanel.tsx  ProviderDebugPanel.tsx  ReaderReview.tsx  WorkflowCanvas.tsx  Workspace.tsx
src/data/: mock.ts
src/lib/: desktop.ts
src/services/: bibleGenerator.ts  candidateGenerator.ts  chapterGoalGenerator.ts  draftGenerator.ts  memoryGenerator.ts  modelConfigClient.ts  orchestratorClient.ts  projectStateClient.ts  promptPresets.ts  reviewSimulator.ts  rewriteSimulator.ts  zhuqueClient.ts
src/store/: useProjectStore.ts
src/types/: domain.ts
tools/: backend-contract.cjs  live-e2e.cjs  zhuque-probe.cjs
